[package]
name = "tdns-update"
description = "Dynamic DNS updater (RFC 2136) - superseded by `tdns-cli`"
repository = "https://github.com/rotty/tdns-update"
homepage = "https://github.com/rotty/tdns-update"
version = "0.0.5"
authors = ["Andreas Rottmann <a.rottmann@gmx.at>"]
license = "GPL-3.0-or-later"
edition = "2018"

[badges]
maintenance = { status = "deprecated" }
